refactor: moved test files to test folder, chore: shortened comments